srv/policies-cap/k8s-simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policies-cap
  namespace: tomer-dev
  labels:
    app: policies-cap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: policies-cap
  template:
    metadata:
      labels:
        app: policies-cap
    spec:
      imagePullSecrets:
      - name: docker-registry
      containers:
      - name: policies-cap
        image: scai-dev.common.repositories.cloud.sap/policies-cap/policies-cap:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4004
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
          runAsGroup: 1001
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          capabilities:
            drop:
            - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: policies-cap
  namespace: tomer-dev
  labels:
    app: policies-cap
spec:
  selector:
    app: policies-cap
  ports:
  - port: 80
    targetPort: 4004
    protocol: TCP
  type: ClusterIP
