srv/policies-cap/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: policies-cap
  namespace: tomer-dev
  labels:
    app: policies-cap
spec:
  hosts:
  - policies-cap-tomer-dev.c-127c9ef.stage.kyma.ondemand.com
  gateways:
  - kyma-system/kyma-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: policies-cap.tomer-dev.svc.cluster.local
        port:
          number: 80
